Phase_2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM_KW IDENTIFIER declarations procedure_list compound_statement DOT
Rule 2     declarations -> VAR_KW declaration_list SEMICOLON
Rule 3     declarations -> empty
Rule 4     declaration_list -> identifier_list COLON type
Rule 5     declaration_list -> declaration_list SEMICOLON identifier_list COLON type
Rule 6     identifier_list -> IDENTIFIER
Rule 7     identifier_list -> identifier_list COMMA IDENTIFIER
Rule 8     type -> INTEGER_KW
Rule 9     type -> REAL_KW
Rule 10    procedure_list -> procedure_list procedure
Rule 11    procedure_list -> procedure_list function
Rule 12    procedure_list -> empty
Rule 13    procedure -> PROCEDURE_KW IDENTIFIER parameters SEMICOLON declarations compound_statement SEMICOLON
Rule 14    function -> FUNCTION_KW IDENTIFIER parameters COLON type SEMICOLON declarations compound_statement SEMICOLON
Rule 15    parameters -> LRB declaration_list RRB
Rule 16    parameters -> empty
Rule 17    compound_statement -> BEGIN_KW statement_list END_KW
Rule 18    statement_list -> statement
Rule 19    statement_list -> statement_list SEMICOLON statement
Rule 20    statement -> IDENTIFIER ASSIGN expression
Rule 21    statement -> IF_KW expression THEN_KW statement ELSE_KW statement
Rule 22    statement -> IF_KW expression THEN_KW statement
Rule 23    statement -> WHILE_KW expression DO_KW statement
Rule 24    statement -> compound_statement
Rule 25    statement -> IDENTIFIER arguments
Rule 26    statement -> empty
Rule 27    arguments -> LRB actual_parameter_list RRB
Rule 28    actual_parameter_list -> actual_parameter_list COMMA actual_parameter
Rule 29    actual_parameter_list -> actual_parameter
Rule 30    actual_parameter -> expression
Rule 31    expression -> INTEGER_CONSTANT
Rule 32    expression -> REAL_CONSTANT
Rule 33    expression -> IDENTIFIER
Rule 34    expression -> expression SUM expression
Rule 35    expression -> expression SUB expression
Rule 36    expression -> expression MUL expression
Rule 37    expression -> expression DIV expression
Rule 38    expression -> SUB expression
Rule 39    expression -> expression DIV_KW expression
Rule 40    expression -> expression MOD_KW expression
Rule 41    expression -> expression LT expression
Rule 42    expression -> expression LE expression
Rule 43    expression -> expression EQ expression
Rule 44    expression -> expression NE expression
Rule 45    expression -> expression GT expression
Rule 46    expression -> expression GE expression
Rule 47    expression -> expression AND_KW expression
Rule 48    expression -> expression OR_KW expression
Rule 49    expression -> NOT_KW expression
Rule 50    expression -> LRB expression RRB
Rule 51    empty -> <empty>

Terminals, with rules where they appear

AND_KW               : 47
ASSIGN               : 20
BEGIN_KW             : 17
COLON                : 4 5 14
COMMA                : 7 28
DIV                  : 37
DIV_KW               : 39
DOT                  : 1
DO_KW                : 23
ELSE_KW              : 21
END_KW               : 17
EQ                   : 43
ERROR                : 
FUNCTION_KW          : 14
GE                   : 46
GT                   : 45
IDENTIFIER           : 1 6 7 13 14 20 25 33
IF_KW                : 21 22
INTEGER_CONSTANT     : 31
INTEGER_KW           : 8
LE                   : 42
LRB                  : 15 27 50
LT                   : 41
MOD_KW               : 40
MUL                  : 36
NE                   : 44
NOT_KW               : 49
OR_KW                : 48
PROCEDURE_KW         : 13
PROGRAM_KW           : 1
REAL_CONSTANT        : 32
REAL_KW              : 9
RRB                  : 15 27 50
SEMICOLON            : 2 5 13 13 14 14 19
SUB                  : 35 38
SUM                  : 34
THEN_KW              : 21 22
VAR_KW               : 2
WHILE_KW             : 23
error                : 

Nonterminals, with rules where they appear

actual_parameter     : 28 29
actual_parameter_list : 27 28
arguments            : 25
compound_statement   : 1 13 14 24
declaration_list     : 2 5 15
declarations         : 1 13 14
empty                : 3 12 16 26
expression           : 20 21 22 23 30 34 34 35 35 36 36 37 37 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 50
function             : 11
identifier_list      : 4 5 7
parameters           : 13 14
procedure            : 10
procedure_list       : 1 10 11
program              : 0
statement            : 18 19 21 21 22 23
statement_list       : 17 19
type                 : 4 5 14

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM_KW IDENTIFIER declarations procedure_list compound_statement DOT

    PROGRAM_KW      shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM_KW . IDENTIFIER declarations procedure_list compound_statement DOT

    IDENTIFIER      shift and go to state 3


state 3

    (1) program -> PROGRAM_KW IDENTIFIER . declarations procedure_list compound_statement DOT
    (2) declarations -> . VAR_KW declaration_list SEMICOLON
    (3) declarations -> . empty
    (51) empty -> .

    VAR_KW          shift and go to state 5
    BEGIN_KW        reduce using rule 51 (empty -> .)
    PROCEDURE_KW    reduce using rule 51 (empty -> .)
    FUNCTION_KW     reduce using rule 51 (empty -> .)

    declarations                   shift and go to state 4
    empty                          shift and go to state 6

state 4

    (1) program -> PROGRAM_KW IDENTIFIER declarations . procedure_list compound_statement DOT
    (10) procedure_list -> . procedure_list procedure
    (11) procedure_list -> . procedure_list function
    (12) procedure_list -> . empty
    (51) empty -> .

    BEGIN_KW        reduce using rule 51 (empty -> .)
    PROCEDURE_KW    reduce using rule 51 (empty -> .)
    FUNCTION_KW     reduce using rule 51 (empty -> .)

    procedure_list                 shift and go to state 7
    empty                          shift and go to state 8

state 5

    (2) declarations -> VAR_KW . declaration_list SEMICOLON
    (4) declaration_list -> . identifier_list COLON type
    (5) declaration_list -> . declaration_list SEMICOLON identifier_list COLON type
    (6) identifier_list -> . IDENTIFIER
    (7) identifier_list -> . identifier_list COMMA IDENTIFIER

    IDENTIFIER      shift and go to state 11

    declaration_list               shift and go to state 9
    identifier_list                shift and go to state 10

state 6

    (3) declarations -> empty .

    BEGIN_KW        reduce using rule 3 (declarations -> empty .)
    PROCEDURE_KW    reduce using rule 3 (declarations -> empty .)
    FUNCTION_KW     reduce using rule 3 (declarations -> empty .)


state 7

    (1) program -> PROGRAM_KW IDENTIFIER declarations procedure_list . compound_statement DOT
    (10) procedure_list -> procedure_list . procedure
    (11) procedure_list -> procedure_list . function
    (17) compound_statement -> . BEGIN_KW statement_list END_KW
    (13) procedure -> . PROCEDURE_KW IDENTIFIER parameters SEMICOLON declarations compound_statement SEMICOLON
    (14) function -> . FUNCTION_KW IDENTIFIER parameters COLON type SEMICOLON declarations compound_statement SEMICOLON

    BEGIN_KW        shift and go to state 15
    PROCEDURE_KW    shift and go to state 16
    FUNCTION_KW     shift and go to state 17

    compound_statement             shift and go to state 12
    procedure                      shift and go to state 13
    function                       shift and go to state 14

state 8

    (12) procedure_list -> empty .

    BEGIN_KW        reduce using rule 12 (procedure_list -> empty .)
    PROCEDURE_KW    reduce using rule 12 (procedure_list -> empty .)
    FUNCTION_KW     reduce using rule 12 (procedure_list -> empty .)


state 9

    (2) declarations -> VAR_KW declaration_list . SEMICOLON
    (5) declaration_list -> declaration_list . SEMICOLON identifier_list COLON type

    SEMICOLON       shift and go to state 18


state 10

    (4) declaration_list -> identifier_list . COLON type
    (7) identifier_list -> identifier_list . COMMA IDENTIFIER

    COLON           shift and go to state 19
    COMMA           shift and go to state 20


state 11

    (6) identifier_list -> IDENTIFIER .

    COLON           reduce using rule 6 (identifier_list -> IDENTIFIER .)
    COMMA           reduce using rule 6 (identifier_list -> IDENTIFIER .)


state 12

    (1) program -> PROGRAM_KW IDENTIFIER declarations procedure_list compound_statement . DOT

    DOT             shift and go to state 21


state 13

    (10) procedure_list -> procedure_list procedure .

    BEGIN_KW        reduce using rule 10 (procedure_list -> procedure_list procedure .)
    PROCEDURE_KW    reduce using rule 10 (procedure_list -> procedure_list procedure .)
    FUNCTION_KW     reduce using rule 10 (procedure_list -> procedure_list procedure .)


state 14

    (11) procedure_list -> procedure_list function .

    BEGIN_KW        reduce using rule 11 (procedure_list -> procedure_list function .)
    PROCEDURE_KW    reduce using rule 11 (procedure_list -> procedure_list function .)
    FUNCTION_KW     reduce using rule 11 (procedure_list -> procedure_list function .)


state 15

    (17) compound_statement -> BEGIN_KW . statement_list END_KW
    (18) statement_list -> . statement
    (19) statement_list -> . statement_list SEMICOLON statement
    (20) statement -> . IDENTIFIER ASSIGN expression
    (21) statement -> . IF_KW expression THEN_KW statement ELSE_KW statement
    (22) statement -> . IF_KW expression THEN_KW statement
    (23) statement -> . WHILE_KW expression DO_KW statement
    (24) statement -> . compound_statement
    (25) statement -> . IDENTIFIER arguments
    (26) statement -> . empty
    (17) compound_statement -> . BEGIN_KW statement_list END_KW
    (51) empty -> .

    IDENTIFIER      shift and go to state 24
    IF_KW           shift and go to state 25
    WHILE_KW        shift and go to state 26
    BEGIN_KW        shift and go to state 15
    END_KW          reduce using rule 51 (empty -> .)
    SEMICOLON       reduce using rule 51 (empty -> .)

    statement_list                 shift and go to state 22
    statement                      shift and go to state 23
    compound_statement             shift and go to state 27
    empty                          shift and go to state 28

state 16

    (13) procedure -> PROCEDURE_KW . IDENTIFIER parameters SEMICOLON declarations compound_statement SEMICOLON

    IDENTIFIER      shift and go to state 29


state 17

    (14) function -> FUNCTION_KW . IDENTIFIER parameters COLON type SEMICOLON declarations compound_statement SEMICOLON

    IDENTIFIER      shift and go to state 30


state 18

    (2) declarations -> VAR_KW declaration_list SEMICOLON .
    (5) declaration_list -> declaration_list SEMICOLON . identifier_list COLON type
    (6) identifier_list -> . IDENTIFIER
    (7) identifier_list -> . identifier_list COMMA IDENTIFIER

    BEGIN_KW        reduce using rule 2 (declarations -> VAR_KW declaration_list SEMICOLON .)
    PROCEDURE_KW    reduce using rule 2 (declarations -> VAR_KW declaration_list SEMICOLON .)
    FUNCTION_KW     reduce using rule 2 (declarations -> VAR_KW declaration_list SEMICOLON .)
    IDENTIFIER      shift and go to state 11

    identifier_list                shift and go to state 31

state 19

    (4) declaration_list -> identifier_list COLON . type
    (8) type -> . INTEGER_KW
    (9) type -> . REAL_KW

    INTEGER_KW      shift and go to state 33
    REAL_KW         shift and go to state 34

    type                           shift and go to state 32

state 20

    (7) identifier_list -> identifier_list COMMA . IDENTIFIER

    IDENTIFIER      shift and go to state 35


state 21

    (1) program -> PROGRAM_KW IDENTIFIER declarations procedure_list compound_statement DOT .

    $end            reduce using rule 1 (program -> PROGRAM_KW IDENTIFIER declarations procedure_list compound_statement DOT .)


state 22

    (17) compound_statement -> BEGIN_KW statement_list . END_KW
    (19) statement_list -> statement_list . SEMICOLON statement

    END_KW          shift and go to state 36
    SEMICOLON       shift and go to state 37


state 23

    (18) statement_list -> statement .

    END_KW          reduce using rule 18 (statement_list -> statement .)
    SEMICOLON       reduce using rule 18 (statement_list -> statement .)


state 24

    (20) statement -> IDENTIFIER . ASSIGN expression
    (25) statement -> IDENTIFIER . arguments
    (27) arguments -> . LRB actual_parameter_list RRB

    ASSIGN          shift and go to state 38
    LRB             shift and go to state 40

    arguments                      shift and go to state 39

state 25

    (21) statement -> IF_KW . expression THEN_KW statement ELSE_KW statement
    (22) statement -> IF_KW . expression THEN_KW statement
    (31) expression -> . INTEGER_CONSTANT
    (32) expression -> . REAL_CONSTANT
    (33) expression -> . IDENTIFIER
    (34) expression -> . expression SUM expression
    (35) expression -> . expression SUB expression
    (36) expression -> . expression MUL expression
    (37) expression -> . expression DIV expression
    (38) expression -> . SUB expression
    (39) expression -> . expression DIV_KW expression
    (40) expression -> . expression MOD_KW expression
    (41) expression -> . expression LT expression
    (42) expression -> . expression LE expression
    (43) expression -> . expression EQ expression
    (44) expression -> . expression NE expression
    (45) expression -> . expression GT expression
    (46) expression -> . expression GE expression
    (47) expression -> . expression AND_KW expression
    (48) expression -> . expression OR_KW expression
    (49) expression -> . NOT_KW expression
    (50) expression -> . LRB expression RRB

    INTEGER_CONSTANT shift and go to state 42
    REAL_CONSTANT   shift and go to state 43
    IDENTIFIER      shift and go to state 44
    SUB             shift and go to state 45
    NOT_KW          shift and go to state 46
    LRB             shift and go to state 47

    expression                     shift and go to state 41

state 26

    (23) statement -> WHILE_KW . expression DO_KW statement
    (31) expression -> . INTEGER_CONSTANT
    (32) expression -> . REAL_CONSTANT
    (33) expression -> . IDENTIFIER
    (34) expression -> . expression SUM expression
    (35) expression -> . expression SUB expression
    (36) expression -> . expression MUL expression
    (37) expression -> . expression DIV expression
    (38) expression -> . SUB expression
    (39) expression -> . expression DIV_KW expression
    (40) expression -> . expression MOD_KW expression
    (41) expression -> . expression LT expression
    (42) expression -> . expression LE expression
    (43) expression -> . expression EQ expression
    (44) expression -> . expression NE expression
    (45) expression -> . expression GT expression
    (46) expression -> . expression GE expression
    (47) expression -> . expression AND_KW expression
    (48) expression -> . expression OR_KW expression
    (49) expression -> . NOT_KW expression
    (50) expression -> . LRB expression RRB

    INTEGER_CONSTANT shift and go to state 42
    REAL_CONSTANT   shift and go to state 43
    IDENTIFIER      shift and go to state 44
    SUB             shift and go to state 45
    NOT_KW          shift and go to state 46
    LRB             shift and go to state 47

    expression                     shift and go to state 48

state 27

    (24) statement -> compound_statement .

    END_KW          reduce using rule 24 (statement -> compound_statement .)
    SEMICOLON       reduce using rule 24 (statement -> compound_statement .)
    ELSE_KW         reduce using rule 24 (statement -> compound_statement .)


state 28

    (26) statement -> empty .

    END_KW          reduce using rule 26 (statement -> empty .)
    SEMICOLON       reduce using rule 26 (statement -> empty .)
    ELSE_KW         reduce using rule 26 (statement -> empty .)


state 29

    (13) procedure -> PROCEDURE_KW IDENTIFIER . parameters SEMICOLON declarations compound_statement SEMICOLON
    (15) parameters -> . LRB declaration_list RRB
    (16) parameters -> . empty
    (51) empty -> .

    LRB             shift and go to state 50
    SEMICOLON       reduce using rule 51 (empty -> .)

    parameters                     shift and go to state 49
    empty                          shift and go to state 51

state 30

    (14) function -> FUNCTION_KW IDENTIFIER . parameters COLON type SEMICOLON declarations compound_statement SEMICOLON
    (15) parameters -> . LRB declaration_list RRB
    (16) parameters -> . empty
    (51) empty -> .

    LRB             shift and go to state 50
    COLON           reduce using rule 51 (empty -> .)

    parameters                     shift and go to state 52
    empty                          shift and go to state 51

state 31

    (5) declaration_list -> declaration_list SEMICOLON identifier_list . COLON type
    (7) identifier_list -> identifier_list . COMMA IDENTIFIER

    COLON           shift and go to state 53
    COMMA           shift and go to state 20


state 32

    (4) declaration_list -> identifier_list COLON type .

    SEMICOLON       reduce using rule 4 (declaration_list -> identifier_list COLON type .)
    RRB             reduce using rule 4 (declaration_list -> identifier_list COLON type .)


state 33

    (8) type -> INTEGER_KW .

    SEMICOLON       reduce using rule 8 (type -> INTEGER_KW .)
    RRB             reduce using rule 8 (type -> INTEGER_KW .)


state 34

    (9) type -> REAL_KW .

    SEMICOLON       reduce using rule 9 (type -> REAL_KW .)
    RRB             reduce using rule 9 (type -> REAL_KW .)


state 35

    (7) identifier_list -> identifier_list COMMA IDENTIFIER .

    COLON           reduce using rule 7 (identifier_list -> identifier_list COMMA IDENTIFIER .)
    COMMA           reduce using rule 7 (identifier_list -> identifier_list COMMA IDENTIFIER .)


state 36

    (17) compound_statement -> BEGIN_KW statement_list END_KW .

    DOT             reduce using rule 17 (compound_statement -> BEGIN_KW statement_list END_KW .)
    END_KW          reduce using rule 17 (compound_statement -> BEGIN_KW statement_list END_KW .)
    SEMICOLON       reduce using rule 17 (compound_statement -> BEGIN_KW statement_list END_KW .)
    ELSE_KW         reduce using rule 17 (compound_statement -> BEGIN_KW statement_list END_KW .)


state 37

    (19) statement_list -> statement_list SEMICOLON . statement
    (20) statement -> . IDENTIFIER ASSIGN expression
    (21) statement -> . IF_KW expression THEN_KW statement ELSE_KW statement
    (22) statement -> . IF_KW expression THEN_KW statement
    (23) statement -> . WHILE_KW expression DO_KW statement
    (24) statement -> . compound_statement
    (25) statement -> . IDENTIFIER arguments
    (26) statement -> . empty
    (17) compound_statement -> . BEGIN_KW statement_list END_KW
    (51) empty -> .

    IDENTIFIER      shift and go to state 24
    IF_KW           shift and go to state 25
    WHILE_KW        shift and go to state 26
    BEGIN_KW        shift and go to state 15
    END_KW          reduce using rule 51 (empty -> .)
    SEMICOLON       reduce using rule 51 (empty -> .)

    statement                      shift and go to state 54
    compound_statement             shift and go to state 27
    empty                          shift and go to state 28

state 38

    (20) statement -> IDENTIFIER ASSIGN . expression
    (31) expression -> . INTEGER_CONSTANT
    (32) expression -> . REAL_CONSTANT
    (33) expression -> . IDENTIFIER
    (34) expression -> . expression SUM expression
    (35) expression -> . expression SUB expression
    (36) expression -> . expression MUL expression
    (37) expression -> . expression DIV expression
    (38) expression -> . SUB expression
    (39) expression -> . expression DIV_KW expression
    (40) expression -> . expression MOD_KW expression
    (41) expression -> . expression LT expression
    (42) expression -> . expression LE expression
    (43) expression -> . expression EQ expression
    (44) expression -> . expression NE expression
    (45) expression -> . expression GT expression
    (46) expression -> . expression GE expression
    (47) expression -> . expression AND_KW expression
    (48) expression -> . expression OR_KW expression
    (49) expression -> . NOT_KW expression
    (50) expression -> . LRB expression RRB

    INTEGER_CONSTANT shift and go to state 42
    REAL_CONSTANT   shift and go to state 43
    IDENTIFIER      shift and go to state 44
    SUB             shift and go to state 45
    NOT_KW          shift and go to state 46
    LRB             shift and go to state 47

    expression                     shift and go to state 55

state 39

    (25) statement -> IDENTIFIER arguments .

    END_KW          reduce using rule 25 (statement -> IDENTIFIER arguments .)
    SEMICOLON       reduce using rule 25 (statement -> IDENTIFIER arguments .)
    ELSE_KW         reduce using rule 25 (statement -> IDENTIFIER arguments .)


state 40

    (27) arguments -> LRB . actual_parameter_list RRB
    (28) actual_parameter_list -> . actual_parameter_list COMMA actual_parameter
    (29) actual_parameter_list -> . actual_parameter
    (30) actual_parameter -> . expression
    (31) expression -> . INTEGER_CONSTANT
    (32) expression -> . REAL_CONSTANT
    (33) expression -> . IDENTIFIER
    (34) expression -> . expression SUM expression
    (35) expression -> . expression SUB expression
    (36) expression -> . expression MUL expression
    (37) expression -> . expression DIV expression
    (38) expression -> . SUB expression
    (39) expression -> . expression DIV_KW expression
    (40) expression -> . expression MOD_KW expression
    (41) expression -> . expression LT expression
    (42) expression -> . expression LE expression
    (43) expression -> . expression EQ expression
    (44) expression -> . expression NE expression
    (45) expression -> . expression GT expression
    (46) expression -> . expression GE expression
    (47) expression -> . expression AND_KW expression
    (48) expression -> . expression OR_KW expression
    (49) expression -> . NOT_KW expression
    (50) expression -> . LRB expression RRB

    INTEGER_CONSTANT shift and go to state 42
    REAL_CONSTANT   shift and go to state 43
    IDENTIFIER      shift and go to state 44
    SUB             shift and go to state 45
    NOT_KW          shift and go to state 46
    LRB             shift and go to state 47

    actual_parameter_list          shift and go to state 56
    actual_parameter               shift and go to state 57
    expression                     shift and go to state 58

state 41

    (21) statement -> IF_KW expression . THEN_KW statement ELSE_KW statement
    (22) statement -> IF_KW expression . THEN_KW statement
    (34) expression -> expression . SUM expression
    (35) expression -> expression . SUB expression
    (36) expression -> expression . MUL expression
    (37) expression -> expression . DIV expression
    (39) expression -> expression . DIV_KW expression
    (40) expression -> expression . MOD_KW expression
    (41) expression -> expression . LT expression
    (42) expression -> expression . LE expression
    (43) expression -> expression . EQ expression
    (44) expression -> expression . NE expression
    (45) expression -> expression . GT expression
    (46) expression -> expression . GE expression
    (47) expression -> expression . AND_KW expression
    (48) expression -> expression . OR_KW expression

    THEN_KW         shift and go to state 59
    SUM             shift and go to state 60
    SUB             shift and go to state 61
    MUL             shift and go to state 62
    DIV             shift and go to state 63
    DIV_KW          shift and go to state 64
    MOD_KW          shift and go to state 65
    LT              shift and go to state 66
    LE              shift and go to state 67
    EQ              shift and go to state 68
    NE              shift and go to state 69
    GT              shift and go to state 70
    GE              shift and go to state 71
    AND_KW          shift and go to state 72
    OR_KW           shift and go to state 73


state 42

    (31) expression -> INTEGER_CONSTANT .

    THEN_KW         reduce using rule 31 (expression -> INTEGER_CONSTANT .)
    SUM             reduce using rule 31 (expression -> INTEGER_CONSTANT .)
    SUB             reduce using rule 31 (expression -> INTEGER_CONSTANT .)
    MUL             reduce using rule 31 (expression -> INTEGER_CONSTANT .)
    DIV             reduce using rule 31 (expression -> INTEGER_CONSTANT .)
    DIV_KW          reduce using rule 31 (expression -> INTEGER_CONSTANT .)
    MOD_KW          reduce using rule 31 (expression -> INTEGER_CONSTANT .)
    LT              reduce using rule 31 (expression -> INTEGER_CONSTANT .)
    LE              reduce using rule 31 (expression -> INTEGER_CONSTANT .)
    EQ              reduce using rule 31 (expression -> INTEGER_CONSTANT .)
    NE              reduce using rule 31 (expression -> INTEGER_CONSTANT .)
    GT              reduce using rule 31 (expression -> INTEGER_CONSTANT .)
    GE              reduce using rule 31 (expression -> INTEGER_CONSTANT .)
    AND_KW          reduce using rule 31 (expression -> INTEGER_CONSTANT .)
    OR_KW           reduce using rule 31 (expression -> INTEGER_CONSTANT .)
    DO_KW           reduce using rule 31 (expression -> INTEGER_CONSTANT .)
    END_KW          reduce using rule 31 (expression -> INTEGER_CONSTANT .)
    SEMICOLON       reduce using rule 31 (expression -> INTEGER_CONSTANT .)
    ELSE_KW         reduce using rule 31 (expression -> INTEGER_CONSTANT .)
    RRB             reduce using rule 31 (expression -> INTEGER_CONSTANT .)
    COMMA           reduce using rule 31 (expression -> INTEGER_CONSTANT .)


state 43

    (32) expression -> REAL_CONSTANT .

    THEN_KW         reduce using rule 32 (expression -> REAL_CONSTANT .)
    SUM             reduce using rule 32 (expression -> REAL_CONSTANT .)
    SUB             reduce using rule 32 (expression -> REAL_CONSTANT .)
    MUL             reduce using rule 32 (expression -> REAL_CONSTANT .)
    DIV             reduce using rule 32 (expression -> REAL_CONSTANT .)
    DIV_KW          reduce using rule 32 (expression -> REAL_CONSTANT .)
    MOD_KW          reduce using rule 32 (expression -> REAL_CONSTANT .)
    LT              reduce using rule 32 (expression -> REAL_CONSTANT .)
    LE              reduce using rule 32 (expression -> REAL_CONSTANT .)
    EQ              reduce using rule 32 (expression -> REAL_CONSTANT .)
    NE              reduce using rule 32 (expression -> REAL_CONSTANT .)
    GT              reduce using rule 32 (expression -> REAL_CONSTANT .)
    GE              reduce using rule 32 (expression -> REAL_CONSTANT .)
    AND_KW          reduce using rule 32 (expression -> REAL_CONSTANT .)
    OR_KW           reduce using rule 32 (expression -> REAL_CONSTANT .)
    DO_KW           reduce using rule 32 (expression -> REAL_CONSTANT .)
    END_KW          reduce using rule 32 (expression -> REAL_CONSTANT .)
    SEMICOLON       reduce using rule 32 (expression -> REAL_CONSTANT .)
    ELSE_KW         reduce using rule 32 (expression -> REAL_CONSTANT .)
    RRB             reduce using rule 32 (expression -> REAL_CONSTANT .)
    COMMA           reduce using rule 32 (expression -> REAL_CONSTANT .)


state 44

    (33) expression -> IDENTIFIER .

    THEN_KW         reduce using rule 33 (expression -> IDENTIFIER .)
    SUM             reduce using rule 33 (expression -> IDENTIFIER .)
    SUB             reduce using rule 33 (expression -> IDENTIFIER .)
    MUL             reduce using rule 33 (expression -> IDENTIFIER .)
    DIV             reduce using rule 33 (expression -> IDENTIFIER .)
    DIV_KW          reduce using rule 33 (expression -> IDENTIFIER .)
    MOD_KW          reduce using rule 33 (expression -> IDENTIFIER .)
    LT              reduce using rule 33 (expression -> IDENTIFIER .)
    LE              reduce using rule 33 (expression -> IDENTIFIER .)
    EQ              reduce using rule 33 (expression -> IDENTIFIER .)
    NE              reduce using rule 33 (expression -> IDENTIFIER .)
    GT              reduce using rule 33 (expression -> IDENTIFIER .)
    GE              reduce using rule 33 (expression -> IDENTIFIER .)
    AND_KW          reduce using rule 33 (expression -> IDENTIFIER .)
    OR_KW           reduce using rule 33 (expression -> IDENTIFIER .)
    DO_KW           reduce using rule 33 (expression -> IDENTIFIER .)
    END_KW          reduce using rule 33 (expression -> IDENTIFIER .)
    SEMICOLON       reduce using rule 33 (expression -> IDENTIFIER .)
    ELSE_KW         reduce using rule 33 (expression -> IDENTIFIER .)
    RRB             reduce using rule 33 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 33 (expression -> IDENTIFIER .)


state 45
